Adjusted share amount

--- a/01_main.ipynb
+++ b/01_main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "c4ac6541",
    "metadata": {},
    "outputs": [
@@ -18,33 +18,68 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
       "[*********************100%***********************]  1 of 1 completed"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Portfolio Alpha: 0.0006974509765691261, Portfolio Beta: 0.7458812438344264\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSCI_Europe_Small_Cap: Annualized Alpha: 0.02172244360426623, Portfolio Beta: 0.48238440224920465\n",
+      "MSCI_Europe_Mid_Cap: Annualized Alpha: 0.010756237660298984, Portfolio Beta: 0.8200206519440603\n",
+      "MSCI_World_Value_Factor: Annualized Alpha: 0.008275475170406832, Portfolio Beta: 0.7674495524863433\n",
+      "Eurostoxx_50: Annualized Alpha: -0.0013632246103828516, Portfolio Beta: 0.7188946887352047\n",
+      "Eurostoxx_600: Annualized Alpha: 0.0012763286461892065, Portfolio Beta: 0.8522424184810489\n",
+      "MSCI_World: Annualized Alpha: -0.01218555491047546, Portfolio Beta: 0.8040831897045634\n",
+      "Eurostoxx_50: Annualized Alpha: 0.002444552051018123, Portfolio Beta: 0.4921875560802905\n",
+      "Eurostoxx_600: Annualized Alpha: 0.00519377042703284, Portfolio Beta: 0.5649653237044348\n",
+      "MSCI_World: Annualized Alpha: -0.003739089349466429, Portfolio Beta: 0.510921418536501\n"
      ]
     }
    ],
    "source": [
+    "# Next steps\n",
+    "# TODO: Fix yahoo finance portfoio investmnets price to align with actual portfolio investments amounts\n",
+    "# TODO: Calculate single stock alpha and beta against chosen benchmark to compare with online sources\n",
+    "# TODO: Implement multiple equity investments and divestments in model\n",
+    "# TODO: Construct artificial MSCI Europe Small Cap and Mid Cap indices using available tickers\n",
+    "\n",
+    "\n",
+    "\n",
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -69,6 +104,9 @@
     "benchmarks_ticker = {\n",
     "    # 'SMEA.DE': 'MSCI_Europe_Small_Cap', # Ticker not working\n",
     "    # 'XEMD.PA': 'MSCI_Europe_Mid_Cap', # Ticker not working\n",
+    "    'IEUS': 'MSCI_Europe_Small_Cap',\n",
+    "    'EUMD.L': 'MSCI_Europe_Mid_Cap',\n",
+    "    'IWVL.L': 'MSCI_World_Value_Factor',  # iShares MSCI Europe Small Cap ETF (US)\n",
     "    'EXW1.DE': 'Eurostoxx_50',\n",
     "    'EXSA.DE': 'Eurostoxx_600',\n",
     "    'SWDA.L': 'MSCI_World',\n",
@@ -85,8 +123,10 @@
     "# Calculate portfolio alpha and beta against chosen benchmark\n",
     "chosen_benchmark = 'EXSA.DE'\n",
     "\n",
-    "portfolio_alpha, portfolio_beta = analysis.calculate_portfolio_alpha_beta(portfolio_df, benchmarks_dict, chosen_benchmark)\n",
-    "print(f\"Portfolio Alpha: {portfolio_alpha}, Portfolio Beta: {portfolio_beta}\")\n",
+    "for ticker, benchmark_name in benchmarks_ticker.items():\n",
+    "    portfolio_alpha, portfolio_beta = analysis.calculate_portfolio_alpha_beta(portfolio_df, benchmarks_dict, ticker)\n",
+    "    annualized_alpha = (1+portfolio_alpha)**252 - 1  # Assuming daily returns\n",
+    "    print(f\"{benchmark_name}: Annualized Alpha: {annualized_alpha}, Portfolio Beta: {portfolio_beta}\")\n",
     "\n"
    ]
   },
