refactor: preparing code and structure

--- a/01_main.ipynb
+++ b/01_main.ipynb
@@ -10,67 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
    "id": "c4ac6541",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%***********************]  1 of 1 completed"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MSCI_Europe_Small_Cap: Annualized Alpha: 0.02172244360426623, Portfolio Beta: 0.48238440224920465\n",
-      "MSCI_Europe_Mid_Cap: Annualized Alpha: 0.010756237660298984, Portfolio Beta: 0.8200206519440603\n",
-      "MSCI_World_Value_Factor: Annualized Alpha: 0.008275475170406832, Portfolio Beta: 0.7674495524863433\n",
-      "Eurostoxx_50: Annualized Alpha: -0.0013632246103828516, Portfolio Beta: 0.7188946887352047\n",
-      "Eurostoxx_600: Annualized Alpha: 0.0012763286461892065, Portfolio Beta: 0.8522424184810489\n",
-      "MSCI_World: Annualized Alpha: -0.01218555491047546, Portfolio Beta: 0.8040831897045634\n",
-      "Eurostoxx_50: Annualized Alpha: 0.002444552051018123, Portfolio Beta: 0.4921875560802905\n",
-      "Eurostoxx_600: Annualized Alpha: 0.00519377042703284, Portfolio Beta: 0.5649653237044348\n",
-      "MSCI_World: Annualized Alpha: -0.003739089349466429, Portfolio Beta: 0.510921418536501\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-12T15:38:49.759964Z",
+     "start_time": "2025-10-12T15:38:48.111773Z"
     }
-   ],
+   },
    "source": [
     "# Next steps\n",
     "# TODO: Fix yahoo finance portfoio investmnets price to align with actual portfolio investments amounts\n",
@@ -128,7 +74,59 @@
     "    annualized_alpha = (1+portfolio_alpha)**252 - 1  # Assuming daily returns\n",
     "    print(f\"{benchmark_name}: Annualized Alpha: {annualized_alpha}, Portfolio Beta: {portfolio_beta}\")\n",
     "\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSCI_Europe_Small_Cap: Annualized Alpha: 0.06899246915195967, Portfolio Beta: 0.49228597496567905\n",
+      "MSCI_Europe_Mid_Cap: Annualized Alpha: 0.05441719217842578, Portfolio Beta: 0.7961631858249285\n",
+      "MSCI_World_Value_Factor: Annualized Alpha: 0.04750952259747243, Portfolio Beta: 0.7378872548712497\n",
+      "Eurostoxx_50: Annualized Alpha: 0.05279736152832126, Portfolio Beta: 0.6959408979428249\n",
+      "Eurostoxx_600: Annualized Alpha: 0.05461717630053187, Portfolio Beta: 0.825224566401518\n",
+      "MSCI_World: Annualized Alpha: 0.07811357078052028, Portfolio Beta: 0.34947789276806007\n",
+      "Eurostoxx_50: Annualized Alpha: 0.047489833246811664, Portfolio Beta: 0.49638688428959565\n",
+      "Eurostoxx_600: Annualized Alpha: 0.05047258373392105, Portfolio Beta: 0.569658382323635\n",
+      "MSCI_World: Annualized Alpha: 0.037960282511842136, Portfolio Beta: 0.5255116587009403\n"
+     ]
+    }
+   ],
+   "execution_count": 6
   },
   {
    "cell_type": "code",
