feat: Calculating Sharpe Ratio

--- a/01_main.ipynb
+++ b/01_main.ipynb
@@ -13,8 +13,8 @@
    "id": "c4ac6541",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-12T15:38:49.759964Z",
-     "start_time": "2025-10-12T15:38:48.111773Z"
+     "end_time": "2025-10-12T17:26:15.511366Z",
+     "start_time": "2025-10-12T17:26:13.910987Z"
     }
    },
    "source": [
@@ -34,8 +34,10 @@
     "\n",
     "from data_preparation import prepare\n",
     "from portfolio_model import generate_portfolio\n",
-    "from portfolio_model import analysis\n",
+    "from portfolio_model.analytics import alpha_beta\n",
     "from scipy.stats import linregress\n",
+    "\n",
+    "from portfolio_model.analytics import risk_analysis\n",
     "\n",
     "\n",
     "absolute_path = os.getcwd()\n",
@@ -70,10 +72,12 @@
     "chosen_benchmark = 'EXSA.DE'\n",
     "\n",
     "for ticker, benchmark_name in benchmarks_ticker.items():\n",
-    "    portfolio_alpha, portfolio_beta = analysis.calculate_portfolio_alpha_beta(portfolio_df, benchmarks_dict, ticker)\n",
+    "    portfolio_alpha, portfolio_beta = alpha_beta.calculate_portfolio_alpha_beta(portfolio_df, benchmarks_dict, ticker)\n",
     "    annualized_alpha = (1+portfolio_alpha)**252 - 1  # Assuming daily returns\n",
     "    print(f\"{benchmark_name}: Annualized Alpha: {annualized_alpha}, Portfolio Beta: {portfolio_beta}\")\n",
-    "\n"
+    "\n",
+    "sharpe_ratio = risk_analysis.calculate_sharpe_ratio(portfolio_df, 0.02, 252)\n",
+    "print(f\"Sharpe Ratio:{sharpe_ratio}\")"
    ],
    "outputs": [
     {
@@ -122,11 +126,12 @@
       "MSCI_World: Annualized Alpha: 0.07811357078052028, Portfolio Beta: 0.34947789276806007\n",
       "Eurostoxx_50: Annualized Alpha: 0.047489833246811664, Portfolio Beta: 0.49638688428959565\n",
       "Eurostoxx_600: Annualized Alpha: 0.05047258373392105, Portfolio Beta: 0.569658382323635\n",
-      "MSCI_World: Annualized Alpha: 0.037960282511842136, Portfolio Beta: 0.5255116587009403\n"
+      "MSCI_World: Annualized Alpha: 0.037960282511842136, Portfolio Beta: 0.5255116587009403\n",
+      "Sharpe Ratio:0.4493341703851443\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 8
   },
   {
    "cell_type": "code",
