feat: Calculating Sortino Ratio

--- a/01_main.ipynb
+++ b/01_main.ipynb
@@ -88,6 +88,10 @@
     "sharpe_ratio = risk_analysis.calculate_sharpe_ratio(portfolio_df, 0.02, 252)\n",
     "print(f\"Sharpe Ratio:{sharpe_ratio}\")\n",
     "\n",
+    "sortino_ratio = risk_analysis.calculate_sortino_ratio(portfolio_df, 0.02, 252)\n",
+    "print(f\"Sortino Ratio:{sortino_ratio}\")\n",
+    "\n",
+    "\n",
     "max_dd_info = risk_analysis.calculate_max_drawdown(portfolio_df)\n",
     "print(f\"\\nMax Drawdown: {max_dd_info['max_drawdown_pct']:.2f}%\")\n",
     "print(f\"Peak Date: {max_dd_info['peak_date']}\")\n",
