feat(risk_analysis): Calculate_Value_At_Risk

--- a/01_main.ipynb
+++ b/01_main.ipynb
@@ -13,8 +13,8 @@
    "id": "c4ac6541",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-17T16:54:11.521260Z",
-     "start_time": "2025-10-17T16:53:45.657515Z"
+     "end_time": "2025-10-17T17:47:49.380841Z",
+     "start_time": "2025-10-17T17:47:47.569556Z"
     }
    },
    "source": [
@@ -91,6 +91,8 @@
     "sortino_ratio = risk_analysis.calculate_sortino_ratio(portfolio_df, 0.02, 252)\n",
     "print(f\"Sortino Ratio:{sortino_ratio}\")\n",
     "\n",
+    "var = risk_analysis.calculate_value_at_risk(portfolio_df, 0.95)\n",
+    "print(f\"Var:{var}\")\n",
     "\n",
     "max_dd_info = risk_analysis.calculate_max_drawdown(portfolio_df)\n",
     "print(f\"\\nMax Drawdown: {max_dd_info['max_drawdown_pct']:.2f}%\")\n",
@@ -129,7 +131,7 @@
       "[*********************100%***********************]  1 of 1 completed\n",
       "[*********************100%***********************]  1 of 1 completed\n",
       "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed"
+      "[*********************100%***********************]  1 of 1 completed\n"
      ]
     },
     {
@@ -138,21 +140,15 @@
      "text": [
       "Sharpe Ratio:0.4470170206573546\n",
       "Sortino Ratio:0.6231324999671864\n",
+      "Var:0\n",
       "\n",
       "Max Drawdown: -46.99%\n",
       "Peak Date: 2019-04-30 00:00:00\n",
       "Trough Date: 2020-03-23 00:00:00\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {},
