feat(risk_analysis): Calculate_Conditional_Value_At_Risk

--- a/01_main.ipynb
+++ b/01_main.ipynb
@@ -13,8 +13,8 @@
    "id": "c4ac6541",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-17T17:47:49.380841Z",
-     "start_time": "2025-10-17T17:47:47.569556Z"
+     "end_time": "2025-10-17T17:49:21.763623Z",
+     "start_time": "2025-10-17T17:49:10.224266Z"
     }
    },
    "source": [
@@ -92,7 +92,10 @@
     "print(f\"Sortino Ratio:{sortino_ratio}\")\n",
     "\n",
     "var = risk_analysis.calculate_value_at_risk(portfolio_df, 0.95)\n",
-    "print(f\"Var:{var}\")\n",
+    "print(f\"Value At Risk:{var}\")\n",
+    "\n",
+    "cvar = risk_analysis.calculate_conditional_value_at_risk(portfolio_df, 0.95)\n",
+    "print(f\"Conditional Value At Risk:{cvar}\")\n",
     "\n",
     "max_dd_info = risk_analysis.calculate_max_drawdown(portfolio_df)\n",
     "print(f\"\\nMax Drawdown: {max_dd_info['max_drawdown_pct']:.2f}%\")\n",
@@ -131,24 +134,31 @@
       "[*********************100%***********************]  1 of 1 completed\n",
       "[*********************100%***********************]  1 of 1 completed\n",
       "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n"
+      "[*********************100%***********************]  1 of 1 completed"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sharpe Ratio:0.4470170206573546\n",
-      "Sortino Ratio:0.6231324999671864\n",
-      "Var:0\n",
+      "Sharpe Ratio:0.4470175563351038\n",
+      "Sortino Ratio:0.6231340417118859\n",
+      "Var:0.021911513196039498\n",
       "\n",
       "Max Drawdown: -46.99%\n",
       "Peak Date: 2019-04-30 00:00:00\n",
       "Trough Date: 2020-03-23 00:00:00\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {},
