feat(alpha_beta): Calculate R^2 with alpha and beta

--- a/01_main.ipynb
+++ b/01_main.ipynb
@@ -13,8 +13,8 @@
    "id": "c4ac6541",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-17T17:49:21.763623Z",
-     "start_time": "2025-10-17T17:49:10.224266Z"
+     "end_time": "2025-10-17T18:28:52.255905Z",
+     "start_time": "2025-10-17T18:28:39.698173Z"
     }
    },
    "source": [
@@ -80,22 +80,25 @@
     "chosen_benchmark = 'EXSA.DE'\n",
     "results = []\n",
     "for ticker, benchmark_name in benchmarks_ticker.items():\n",
-    "    alpha, beta = alpha_beta.calculate_portfolio_alpha_beta(portfolio_df, benchmarks_dict, ticker)\n",
+    "    alpha, beta, r_squared = alpha_beta.calculate_portfolio_alpha_beta(portfolio_df, benchmarks_dict, ticker)\n",
     "    annualized_alpha = (1 + alpha) ** 252 - 1\n",
-    "    results.append({\"Benchmark\": benchmark_name, \"Alpha (ann.)\": annualized_alpha, \"Beta\": beta})\n",
+    "    results.append({\"Benchmark\": benchmark_name, \"Alpha (ann.)\": annualized_alpha, \"Beta\": beta, \"R^2\": r_squared})\n",
+    "results_df = pd.DataFrame(results)\n",
+    "print(results_df)\n",
     "\n",
+    "print(\"\\n\")\n",
     "\n",
     "sharpe_ratio = risk_analysis.calculate_sharpe_ratio(portfolio_df, 0.02, 252)\n",
-    "print(f\"Sharpe Ratio:{sharpe_ratio}\")\n",
+    "print(f\"Sharpe Ratio: {sharpe_ratio}\")\n",
     "\n",
     "sortino_ratio = risk_analysis.calculate_sortino_ratio(portfolio_df, 0.02, 252)\n",
-    "print(f\"Sortino Ratio:{sortino_ratio}\")\n",
+    "print(f\"Sortino Ratio: {sortino_ratio}\")\n",
     "\n",
     "var = risk_analysis.calculate_value_at_risk(portfolio_df, 0.95)\n",
-    "print(f\"Value At Risk:{var}\")\n",
+    "print(f\"Value At Risk: {var}\")\n",
     "\n",
     "cvar = risk_analysis.calculate_conditional_value_at_risk(portfolio_df, 0.95)\n",
-    "print(f\"Conditional Value At Risk:{cvar}\")\n",
+    "print(f\"Conditional Value At Risk: {cvar}\")\n",
     "\n",
     "max_dd_info = risk_analysis.calculate_max_drawdown(portfolio_df)\n",
     "print(f\"\\nMax Drawdown: {max_dd_info['max_drawdown_pct']:.2f}%\")\n",
@@ -141,9 +144,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sharpe Ratio:0.4470175563351038\n",
-      "Sortino Ratio:0.6231340417118859\n",
-      "Var:0.021911513196039498\n",
+      "                 Benchmark  Alpha (ann.)      Beta       R^2\n",
+      "0    MSCI_Europe_Small_Cap      0.067851  0.492723  0.184998\n",
+      "1      MSCI_Europe_Mid_Cap      0.053420  0.796307  0.294709\n",
+      "2  MSCI_World_Value_Factor      0.045366  0.736253  0.283026\n",
+      "3             Eurostoxx_50      0.050824  0.695560  0.289687\n",
+      "4            Eurostoxx_600      0.053192  0.824952  0.301767\n",
+      "5               MSCI_World      0.023213  0.781369  0.221878\n",
+      "6             Eurostoxx_50      0.045543  0.496481  0.198439\n",
+      "7            Eurostoxx_600      0.048801  0.569787  0.205090\n",
+      "8               MSCI_World      0.035876  0.525765  0.158531\n",
+      "\n",
+      "\n",
+      "Sharpe Ratio: 0.44701776369412416\n",
+      "Sortino Ratio: 0.6231341577227625\n",
+      "Value At Risk: 0.021911513196039498\n",
+      "Conditional Value At Risk: 0.036746236639371085\n",
       "\n",
       "Max Drawdown: -46.99%\n",
       "Peak Date: 2019-04-30 00:00:00\n",
